<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_foreground"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:id="@+id/gameContainer"
            android:layout_width="392dp"
            android:layout_height="565dp"
            android:layout_below="@+id/scoreTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:elevation="2dp">

        </FrameLayout>

        <Button
            android:id="@+id/backButton"
            android:layout_width="111dp"
            android:layout_height="59dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/Btncolors"
            android:text="@string/back" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="114dp"
            android:backgroundTint="@color/Btncolors"
            android:text="@string/pause" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="142dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/Score"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="326dp"
            android:layout_height="467dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-92dp"
            android:layout_marginTop="337dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="-73dp"
            app:srcCompat="@mipmap/sharkmouth_foreground" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
